# sokkan

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: agentchat.py  app.py  assistant.py  audit.py  auth.py  board.py  board_mcp.py  cfaccess.py  edge.py  fleet.py  fleetterm.py  iam.py  infra.py  instance.py  llm.py  memorykb.py  notify.py  observability.py  observability_mcp.py  oidc.py  panestate.py  preview.py  previewenv.py  provision.py  requirements.txt  session.py  termproxy.py  transcript.py  updatecheck.py  usage.py  vault.py
backend/assistant_kb/: 01-tour-du-produit.md  02-memoire-bonnes-pratiques.md  03-projet-et-sessions.md  04-flotte-et-ressources.md  05-inference-et-couts.md  06-depannage-et-aide.md  07-nouveautes.md
cli/: sokkan_cli.py
docker/: api.Dockerfile  web.Dockerfile
docs/: OPERATE.md  UPGRADE.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md
examples/fastapi-notes/: README.md  requirements.txt  seed.sh
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentChatPane.tsx  (+19 more)
memory/: README.md  embeddings.py  index_memory.py  memory_search_server.py  requirements.txt
scripts/: api-entrypoint.sh  doctor.sh
tests/: conftest.py  test_board.py  test_iam.py  test_llm.py  test_memory_search.py  test_provision.py  test_spawn_flow.py
(+19 files in other folders)
